<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/actionSearch"
        android:icon="@drawable/baseline_search_24"
        app:iconTint="@color/cardview_dark_background"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:title="@string/search"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/actionSort"
        android:icon="@drawable/baseline_sort_24"
        app:iconTint="@color/cardview_dark_background"
        android:title="@string/sort"
        app:showAsAction="always" />

    <item
        android:id="@+id/actionDeleteAll"
        android:icon="@drawable/baseline_delete_forever_24"
        app:iconTint="@color/cardview_dark_background"
        android:title="@string/delete"
        app:showAsAction="always" />

</menu>